# coding-practice

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh  requirements.txt  setup.py
hackerrank/: CMakeLists.txt
leetcode/: CMakeLists.txt
leetcode/latex/: leetcode-problems.tex
leetcode/top150/121-best-time-bs-stocks/: CMakeLists.txt  README.md
leetcode/top150/121-best-time-bs-stocks/c++/: solution.cpp
leetcode/top150/121-best-time-bs-stocks/c++/tests/: test.cpp
leetcode/top150/121-best-time-bs-stocks/python/: solution.py
leetcode/top150/121-best-time-bs-stocks/python/tests/: test.py
leetcode/top150/169-majority-element/: CMakeLists.txt  README.md
leetcode/top150/169-majority-element/c++/: solution.cpp
leetcode/top150/169-majority-element/c++/tests/: test.cpp
leetcode/top150/169-majority-element/python/: __init__.py  solution.py
leetcode/top150/169-majority-element/python/tests/: test.py
leetcode/top150/189-rotate-array/: CMakeLists.txt  README.md
leetcode/top150/189-rotate-array/c++/: solution.cpp
leetcode/top150/189-rotate-array/c++/tests/: test.cpp
leetcode/top150/189-rotate-array/python/: solution.py
leetcode/top150/189-rotate-array/python/tests/: test.py
leetcode/top150/26-remove-duplicates-sorted-array/: CMakeLists.txt  README.md
leetcode/top150/26-remove-duplicates-sorted-array/c++/: solution.cpp
leetcode/top150/26-remove-duplicates-sorted-array/c++/tests/: test.cpp
leetcode/top150/26-remove-duplicates-sorted-array/python/: solution.py
leetcode/top150/26-remove-duplicates-sorted-array/python/tests/: test.py
leetcode/top150/27-remove-element/: CMakeLists.txt  README.md
leetcode/top150/27-remove-element/c++/: solution.cpp
leetcode/top150/27-remove-element/c++/tests/: test.cpp
leetcode/top150/27-remove-element/python/: solution.py
leetcode/top150/27-remove-element/python/tests/: test.py
leetcode/top150/80-remove-duplicates-sorted-arrays-ii/: CMakeLists.txt  README.md
leetcode/top150/80-remove-duplicates-sorted-arrays-ii/c++/: solution.cpp
leetcode/top150/80-remove-duplicates-sorted-arrays-ii/c++/tests/: test.cpp
leetcode/top150/80-remove-duplicates-sorted-arrays-ii/python/: __init__.py  solution.py
leetcode/top150/80-remove-duplicates-sorted-arrays-ii/python/tests/: test.py
leetcode/top150/88-merge-sorted-arrays/: CMakeLists.txt  README.md
leetcode/top150/88-merge-sorted-arrays/c++/: main.cpp  merge_arrays.cpp  solution.cpp
leetcode/top150/88-merge-sorted-arrays/c++/tests/: test.cpp
leetcode/top150/88-merge-sorted-arrays/python/: solution.py
leetcode/top150/88-merge-sorted-arrays/python/tests/: test.py
scripts/: build.sh  create_problem.sh  install_dependencies.sh  pytest_all.sh
templates/: CMakeLists.txt  tempList.txt  templateList.txt
templates/c++/: solution.cpp
templates/c++/include/: solution.hpp
templates/c++/include/templates/: solution.hpp
templates/c++/tests/: test.cpp
templates/python/: solution.py  temp_solution.py
templates/python/tests/: tests.py
