cmake_minimum_required(VERSION 3.16)

project(leetcode)

# All problem subdirectories
add_subdirectory(top150/26-remove-duplicates-sorted-array)
add_subdirectory(top150/27-remove-element)
add_subdirectory(top150/80-remove-duplicates-sorted-arrays-ii)
add_subdirectory(top150/88-merge-sorted-arrays)
add_subdirectory(top150/169-majority-element)
